--- a/package.json
+++ b/package.json
@@ -15,26 +15,31 @@
     "lint:fix": "eslint src/**/*.ts --fix",
     "prepare": "npm run build"
   },
-  "keywords": ["azure-devops", "cli", "work-items", "devops"],
+  "keywords": [
+    "azure-devops",
+    "cli",
+    "work-items",
+    "devops"
+  ],
   "author": "Chris",
   "license": "MIT",
   "dependencies": {
-    "commander": "^11.1.0",
     "axios": "^1.6.0",
+    "chalk": "^4.1.2",
+    "commander": "^11.1.0",
+    "inquirer": "^8.2.7",
     "keytar": "^7.9.0",
-    "chalk": "^5.3.0",
-    "inquirer": "^9.2.0",
-    "ora": "^7.0.0",
-    "open": "^10.0.0"
+    "open": "^10.0.0",
+    "ora": "^5.4.1"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
     "@types/inquirer": "^9.0.0",
+    "@types/jest": "^29.0.0",
+    "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
     "jest": "^29.0.0",
-    "@types/jest": "^29.0.0",
     "ts-jest": "^29.0.0",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0"
